fixed problem of article content overflowing its parent container

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -32,4 +32,5 @@
 
 .trix-content {
   min-height: 400px;
+  overflow-wrap: break-word;
 }
